<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="@color/gray"
    tools:context=".settingsscreen.view.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/langSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_dynamic_tertiary80"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/arabicLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/englishLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/locationSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_dynamic_tertiary80"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/GPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/unitSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/unit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_dynamic_tertiary80"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/standardUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:text="@string/standardDesc"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/metricUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:text="@string/metricDesc"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/imperialUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:text="@string/imperialDesc"
                android:textColor="@color/gray"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/NotificationSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corners"
            android:padding="10dp"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_dynamic_tertiary80"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/notiEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enabled"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/notiDisable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disabled"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

</ScrollView>